avoid the game from being cut off

--- a/src/style.css
+++ b/src/style.css
@@ -23,7 +23,8 @@ which is height for landscape orientation, width for portrait orientation */
 }
 @media screen and (orientation: portrait) {
   canvas {
-    max-width: 95vw;
+    width: 95vw;
+    max-width: 650px;
   }
 }
 
